--- a/README
+++ b/README
@@ -1,10 +1,4 @@
-Information:
+>> UCF Nao Robot Simulation Soccer <<
 
-coded in Eclipse PyDev with the pynaoqi library
-
-
-Folder Directory:
-
-nao_soccer_first, code written when learning the environment
-
-nao_soccer_individual_modules, contains behaviors for individual robots 
+https://sites.google.com/site/ucfrobocup/
+ 
